force-app/main/default/objects/Level_of_Effort_Estimate__c/Level_of_Effort_Estimate__c.object-meta.xml
<CustomObject>
    <label>Level of Effort Estimate</label>
    <nameField>
        <displayFormat>LoE-{00000}</displayFormat>
        <label>LoE Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Level of Effort Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>