force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Analytics__c.field-meta.xml
<CustomField>
    <fullName>Analytics__c</fullName>
    <label>Analytics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SS7</fullName>
            </value>
            <value>
                <fullName>Diameter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>