force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Application_Scope_ASM__c.field-meta.xml
<CustomField>
    <fullName>Application_Scope_ASM__c</fullName>
    <label>Application Scope (ASM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>UT Proxy</fullName>
            </value>
            <value>
                <fullName>ENUM-DNS</fullName>
            </value>
            <value>
                <fullName>ENUM-DNS + NP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>