force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Application_Scope_SDM__c.field-meta.xml
<CustomField>
    <fullName>Application_Scope_SDM__c</fullName>
    <label>Application Scope (SDM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSS (SDM/AuC)</fullName>
            </value>
            <value>
                <fullName>HLR</fullName>
            </value>
            <value>
                <fullName>HSS + HLR (SDM/AuC)</fullName>
            </value>
            <value>
                <fullName>EIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>