force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Application_Scope_SSR__c.field-meta.xml
<CustomField>
    <fullName>Application_Scope_SSR__c</fullName>
    <label>Application Scope (SSR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STP</fullName>
            </value>
            <value>
                <fullName>STP ECC</fullName>
            </value>
            <value>
                <fullName>STP ECC + NP</fullName>
            </value>
            <value>
                <fullName>STP ECC + SiGFW (SS7)</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>DSC ECC</fullName>
            </value>
            <value>
                <fullName>DSC ECC + SiGFW (DIA)</fullName>
            </value>
            <value>
                <fullName>SiGFW (SS7)</fullName>
            </value>
            <value>
                <fullName>SiGFW (DIA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>