force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phased</fullName>
            </value>
            <value>
                <fullName>Big bang/Flash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>