force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/ASM_Migration_Options__c.field-meta.xml
<CustomField>
    <fullName>ASM_Migration_Options__c</fullName>
    <label>ASM Migration Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Scope_ASM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Phased</fullName>
            </value>
            <value>
                <fullName>Big Bang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>