force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Bi_Directional_Replication__c.field-meta.xml
<CustomField>
    <fullName>Bi_Directional_Replication__c</fullName>
    <inlineHelpText>Confirm if bi-directional replication is required.</inlineHelpText>
    <label>Bi-Directional Replication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>