force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/CCA_Complete__c.field-meta.xml
<CustomField>
    <fullName>CCA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCA Complete</label>
    <type>Checkbox</type>
</CustomField>