force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/CDA_Cost__c.field-meta.xml
<CustomField>
    <fullName>CDA_Cost__c</fullName>
    <label>CDA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>