force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/CIA_Complete__c.field-meta.xml
<CustomField>
    <fullName>CIA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIA Complete</label>
    <type>Checkbox</type>
</CustomField>