force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Comments_1__c.field-meta.xml
<CustomField>
    <fullName>Comments_1__c</fullName>
    <label>Comments 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>