force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Comments_2__c.field-meta.xml
<CustomField>
    <fullName>Comments_2__c</fullName>
    <label>Comments 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>