force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Comments_3__c.field-meta.xml
<CustomField>
    <fullName>Comments_3__c</fullName>
    <label>Comments 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>