force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Sales teams should add here all relavant additional information neede dby the dleivery teams to build the LoE Estimate.

This can include (but not limited to) topics such as deployment timing, bespoke customer requirements, approach with partners...</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>