force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Containerized_Cloud_Architect__c.field-meta.xml
<CustomField>
    <fullName>Containerized_Cloud_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Containerized Cloud Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimatesn5dY</relationshipName>
    <type>Lookup</type>
</CustomField>