force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Contingency_days__c.field-meta.xml
<CustomField>
    <fullName>Contingency_days__c</fullName>
    <label>Contingency (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>