force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Contingency_MD_Total__c.field-meta.xml
<CustomField>
    <fullName>Contingency_MD_Total__c</fullName>
    <formula>PS_CCA_CDA_SVCS_Contingency_MD__c +  PS_TRA_CDA_SVCS_Contingency_MD__c +  PS_PMO_CDA_SVCS_Contingency_MD__c +  PS_CIA_CDA_SVCS_Contingency_MD__c +  PS_FIE_CDA_LAB_SVCS_Contingency_MD__c +  PS_FIE_CDA_PROD_SVCS_Contingency_MD__c +  PS_SE_CDA_SVCS_Contingency_MD__c + PS_SDE_SVCS_Contingency_MD__c + PS_PMO_SVCS_Contigency_MD__c + PS_FIE_PROD_SVCS_Contingency_MD__c + PS_FIE_LAB_SVCS_Contingency_MD__c + PS_TRA_SVCS_Contingency_MD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contingency MD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>