force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Cost_w_o_contingency__c.field-meta.xml
<CustomField>
    <fullName>Cost_w_o_contingency__c</fullName>
    <label>Cost (including contingency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>