force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Current_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_SW_Version__c</fullName>
    <inlineHelpText>For additional scope to existing deployments (OTS or CDA), please confirm the current SW version deployed today.</inlineHelpText>
    <label>Current SW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>