force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>