force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Customisation_Innovation_Architect__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Innovation_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customisation &amp; Innovation Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates9</relationshipName>
    <type>Lookup</type>
</CustomField>