force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/CVD__c.field-meta.xml
<CustomField>
    <fullName>CVD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CVD</label>
    <referenceTo>Custom_Virtual_Deployment__c</referenceTo>
    <relationshipLabel>Level of Effort Estimates</relationshipLabel>
    <relationshipName>Level_of_Effort_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>