force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Delivery_Mgmt_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mgmt_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Mgmt. (Approver)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates7</relationshipName>
    <type>Lookup</type>
</CustomField>