force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Deployment_Approach__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Approach__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Type)</formula>
    <label>Deployment Approach</label>
    <type>Text</type>
</CustomField>