force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Deployment_Resourcing__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Resourcing__c</fullName>
    <inlineHelpText>Confirm if the deployment should be done remotely (standard) or if there are customer requirements to provide on-site resources (if so please provide details in the comments section).</inlineHelpText>
    <label>Deployment Resourcing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Only</fullName>
            </value>
            <value>
                <fullName>Remote / On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>