force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTS Deployment</fullName>
            </value>
            <value>
                <fullName>CDA Deployment</fullName>
            </value>
            <value>
                <fullName>OTS &amp; CDA Deployment</fullName>
            </value>
            <value>
                <fullName>OTS Upgrade</fullName>
            </value>
            <value>
                <fullName>CDA Enhancement</fullName>
            </value>
            <value>
                <fullName>CDA Dep&apos;</fullName>
                <isActive>false</isActive>
                <label>CDA Dep&apos;</label>
            </value>
            <value>
                <fullName>CDA Upgrade</fullName>
                <isActive>false</isActive>
                <label>CDA Upgrade</label>
            </value>
            <value>
                <fullName>COTS</fullName>
                <isActive>false</isActive>
                <label>COTS</label>
            </value>
            <value>
                <fullName>COTS + Virtualized</fullName>
                <isActive>false</isActive>
                <label>COTS + Virtualized</label>
            </value>
            <value>
                <fullName>Guaranteed Caller</fullName>
                <isActive>false</isActive>
                <label>Guaranteed Caller</label>
            </value>
            <value>
                <fullName>OTS Dep + CDA Dep&apos;</fullName>
                <isActive>false</isActive>
                <label>OTS Dep + CDA Dep&apos;</label>
            </value>
            <value>
                <fullName>OTS Dep&apos;</fullName>
                <isActive>false</isActive>
                <label>OTS Dep&apos;</label>
            </value>
            <value>
                <fullName>OTS Upgrade + CDA Upgrade</fullName>
                <isActive>false</isActive>
                <label>OTS Upgrade + CDA Upgrade</label>
            </value>
            <value>
                <fullName>Virtualized - Openstack</fullName>
                <isActive>false</isActive>
                <label>Virtualized - Openstack</label>
            </value>
            <value>
                <fullName>Virtualized - VMware</fullName>
                <isActive>false</isActive>
                <label>Virtualized - VMware</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>