force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diameter</label>
    <type>Checkbox</type>
</CustomField>