force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <inlineHelpText>Confirm if ECC is required.</inlineHelpText>
    <label>ECC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>