force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Estimation_Completed_by_TSA__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Completed_by_TSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSA Estimation</label>
    <type>Checkbox</type>
</CustomField>