force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Fast_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Fast_Deployment__c</fullName>
    <label>Fast Deployment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>