force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Field_Engineering_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Field_Engineering_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Engineering Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates5</relationshipName>
    <type>Lookup</type>
</CustomField>