force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Field_Engineering_Complete__c.field-meta.xml
<CustomField>
    <fullName>Field_Engineering_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Engineering Complete</label>
    <type>Checkbox</type>
</CustomField>