force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Final_LoE_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Final_LoE_Estimate__c</fullName>
    <label>Final LoE Estimate</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>