force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/INAP__c.field-meta.xml
<CustomField>
    <fullName>INAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INAP</label>
    <type>Checkbox</type>
</CustomField>