force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <inlineHelpText>Please confirm the infrastructure on which the solution should be deployed.</inlineHelpText>
    <label>Infrastructure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CaaS</fullName>
            </value>
            <value>
                <fullName>COTS</fullName>
            </value>
            <value>
                <fullName>COTS + Virtualized</fullName>
            </value>
            <value>
                <fullName>Virtualized - KVM</fullName>
                <label>Virtualized – KVM</label>
            </value>
            <value>
                <fullName>Virtualized – VMware</fullName>
            </value>
            <value>
                <fullName>Virtualized</fullName>
                <isActive>false</isActive>
                <label>Virtualized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>