force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Integration_to_external_legacy_systems__c.field-meta.xml
<CustomField>
    <fullName>Integration_to_external_legacy_systems__c</fullName>
    <inlineHelpText>Confirm if integration to external/legacy systems considered as part of the deployment.</inlineHelpText>
    <label>Integration (to external/legacy systems)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>