force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Interfaces_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Interfaces_Inbound__c</fullName>
    <label>Interfaces (Inbound)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>