force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>