force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Lab_Nodes_Master__c.field-meta.xml
<CustomField>
    <fullName>Lab_Nodes_Master__c</fullName>
    <inlineHelpText>Confirm total number of master lab nodes.</inlineHelpText>
    <label>Lab Nodes (Master)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>