force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Latest_LoE_Estimate_Provided__c.field-meta.xml
<CustomField>
    <fullName>Latest_LoE_Estimate_Provided__c</fullName>
    <label>LoE Estimate Provided</label>
    <type>Date</type>
</CustomField>