force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Author_based_on_Region__c.field-meta.xml
<CustomField>
    <fullName>LoE_Author_based_on_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoE Author based on Region</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates3</relationshipName>
    <type>Lookup</type>
</CustomField>