force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Estimate_Completed_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>LoE_Estimate_Completed_Entry_Date__c</fullName>
    <description>The date/time the status was changed to LoE Estimate Completed</description>
    <label>LoE Estimate Completed Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>