force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Estimate_Requested_Entry__c.field-meta.xml
<CustomField>
    <fullName>LoE_Estimate_Requested_Entry__c</fullName>
    <description>The date the status was changed to LoE Estimate Requested</description>
    <label>LoE Estimate Requested Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>