force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Estimate_Requested_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>LoE_Estimate_Requested_Exit_Date__c</fullName>
    <description>The date/time the status was changed to LoE Received – WIP</description>
    <label>LoE Estimate Requested Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>