force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LOE_Number_and_Summary__c.field-meta.xml
<CustomField>
    <fullName>LOE_Number_and_Summary__c</fullName>
    <formula>Name + &quot; &quot; + LoE_Summary__c</formula>
    <label>LOE Number and Summary</label>
    <type>Text</type>
</CustomField>