force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Received_WIP_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>LoE_Received_WIP_Entry_Date__c</fullName>
    <description>The date/time the status was changed to LoE Received – WIP</description>
    <label>LoE Received – WIP Entry Date</label>
    <type>DateTime</type>
</CustomField>