force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>LoE_Requested_Date__c</fullName>
    <label>LoE Requested Date</label>
    <type>Date</type>
</CustomField>