force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Requested_WIP_Entry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LoE_Requested_WIP_Entry_Date_Time__c</fullName>
    <label>LoE Requested - WIP Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>