force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Requested_WIP_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>LoE_Requested_WIP_Exit_Date__c</fullName>
    <description>The date/time the status was changed to LoE Estimate Completed</description>
    <label>LoE Requested – WIP Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>