force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/LoE_Summary__c.field-meta.xml
<CustomField>
    <fullName>LoE_Summary__c</fullName>
    <description>Summary of the LoE</description>
    <label>LoE Summary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>