force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Man_Days_3__c.field-meta.xml
<CustomField>
    <fullName>Man_Days_3__c</fullName>
    <label>Man Days 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>