force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <inlineHelpText>Confirm (or provide an assumption) if any migration activities are to be considered as part of the deployment.</inlineHelpText>
    <label>Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Migration/Greenfield</fullName>
            </value>
            <value>
                <fullName>Migration - Phased</fullName>
            </value>
            <value>
                <fullName>Migration - Big Bang</fullName>
            </value>
            <value>
                <fullName>w/ Migration</fullName>
                <isActive>false</isActive>
                <label>w/ Migration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>