force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_by_Date__c</fullName>
    <inlineHelpText>Latest date that you require to have the completed LoE Estimate.</inlineHelpText>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>