force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/of_Sites__c.field-meta.xml
<CustomField>
    <fullName>of_Sites__c</fullName>
    <inlineHelpText>Add the total number of sites considered in teh depoloyemnt.</inlineHelpText>
    <label># of Sites</label>
    <length>100</length>
    <type>Text</type>
</CustomField>