force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/OpenStack_Prep_Template_Creations__c.field-meta.xml
<CustomField>
    <fullName>OpenStack_Prep_Template_Creations__c</fullName>
    <label>OpenStack Prep (Template Creations)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>