force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>