force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Level_of_Effort_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>