force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Performance_Testing__c.field-meta.xml
<CustomField>
    <fullName>Performance_Testing__c</fullName>
    <inlineHelpText>Confirm if performance testing is required.</inlineHelpText>
    <label>Performance Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>